--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   draggable_bottom_sheet: ^1.0.2
   image_picker: ^1.0.1
   firebase_storage: ^11.2.5
+  hive: ^2.2.3
+  hive_flutter:
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: 
+  build_runner: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
