--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^11.2.5
   hive: ^2.2.3
   hive_flutter:
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
